Updated book 17XK

--- a/book/17XK.html
+++ b/book/17XK.html
@@ -12,16 +12,16 @@ $title = '神秘回聲';
 $book = 'E17XK';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/12/1 (530K)');
+ShowUpdbDownload('2023/1/10 (530K) 2017/12/1');
 ShowPrcDownload('2017/12/1 (551K)');
 ShowMobiDownload('2017/12/1 (1520K)');
-ShowEpubDownload('2017/12/1 (364K)');
-ShowVEpubDownload('2017/12/1 (364K)');
+ShowEpubDownload('2023/1/10 (364K) 2017/12/1');
+ShowVEpubDownload('2023/1/10 (364K) 2017/12/1');
 BookSectionEnd();
 ?>
 <img src="covers/17XK.jpg" HSPACE=8 vspace=2 align=right>
 <img src="covers/17XKa.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。譯者穆卓芸。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。sue1289/McDull勘誤19處。<br>
 <br>
 <b>都柏林謀殺小組之三</b><br>
 <br>
@@ -39,8 +39,31 @@ BookSectionEnd();
 <br>
 比《神秘森林》的懸疑佈局更張力十足，比《神秘化身》的駭人秘密更曲折難解！文壇才女塔娜．法蘭琪再次以靈犀之眼透視人性，讓讀者感受成長的苦澀、親情的羈絆，以及嫉妒和背叛的毀滅力道，精采到令人魂不守舍！<br>
 <br>
+譯者： 穆卓芸。<br>
+<br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong><a href="?M=hd&P=pr">勘誤表</a>：</strong><br>
+(sue1289/McDull 2023/1/10)<br>
+傳來細微的窓翠與沉重/傳來細微的窸窣沉重<br>
+改成花稍的字/改成花俏的字<br>
+視，每個月，換女朋友。老/視，每個月換女朋友。老<br>
+椅子往後，推說：﹁/椅子往後推說：﹁<br>
+就是住屋王連欄/就是住屋主連欄<br>
+會掀起人戰。就/會掀起大戰。就<br>
+那個稼伙。但/那個傢伙。但<br>
+﹁我也不法醫，但/﹁我也不是法醫，但<br>
+肩膀徵微一聳/肩膀微微一聳<br>
+我從卡梅兇手裡接過/我從卡梅兒手裡接過<br>
+那個瞻子，把/那個膽子，把<br>
+他用錯筆在桌/他用鉛筆在桌<br>
+打扮花稍的混/打扮花俏的混<br>
+我這一趙就白/我這一趟就白<br>
+找到建第工人/找到建築工人<br>
+一個花稍收尾/一個花俏收尾<br>
+無腦的辣味，想/無腦的辣妹，想<br>
+果被眨回基層/果被貶回基層<br>
+孩子將牆邊推來推/孩子在牆邊推來推<br>
+<br>
 (mPDB 2017/12/1)<br>
 嘟嚷/嘟囔<br>
 寒風剌骨/寒風刺骨<br>
