--- a/book/audioAB001.html
+++ b/book/audioAB001.html
@@ -17,6 +17,8 @@ PlayMP3('AB001-07', '第七篇《曹操：食性露本性》書亞錄音 2022/12
 PlayMP3('AB001-08', '第八篇《諸葛亮：發明的軍食》書亞錄音 2022/12/22');
 PlayMP3('AB001-09', '第九篇《張翰：戀味避禍》書亞錄音 2022/12/29');
 PlayMP3('AB001-10', '第十篇《王羲之：吃名背後》書亞錄音 2023/1/5');
+PlayMP3('AB001-11', '第十一篇《識味奇才苻朗》書亞錄音 2023/1/12');
+PlayMP3('AB001-12', '第十二篇《隋煬帝：珍饈奇觀》書亞錄音 2023/1/12');
 
 ?>
 
