Updated books 14A6, 14A9, 14B0, and 1010490069

--- a/Share/1010490069.html
+++ b/Share/1010490069.html
@@ -12,13 +12,13 @@ $title = '里斯本夜車';
 $book = 'P1010490069';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/12/28');
-ShowEpubDownload('2022/12/28');
-ShowVEpubDownload('2022/12/28');
+ShowUpdbDownload('2023/1/17 2022/12/28');
+ShowEpubDownload('2023/1/17 2022/12/28');
+ShowVEpubDownload('2023/1/17 2022/12/28');
 BookSectionEnd();
 ?>
 <img src="covers/1010490069.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝 Arch 整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Arch整理製作，感謝邱五提供掃瞄檔。感謝sue1289勘誤40處。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -58,5 +58,46 @@ BookSectionEnd();
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(sue1289 2023/1/17)<br>
+獨一無一一/獨一無二<br>
+一二十年/三十年<br>
+羅禹人/羅馬人<br>
+僧惡/憎惡<br>
+陚予/賦予<br>
+宀于宙/宇宙<br>
+隫怒/憤怒<br>
+人睡/入睡<br>
+這悝/這裡<br>
+結東/結束<br>
+眼晴/眼睛<br>
+清況/情況<br>
+鋯覺/錯覺<br>
+顫凓/顫慄<br>
+毛骨陳然/毛骨悚然<br>
+清報/情報<br>
+清緒/情緒<br>
+昭片/照片<br>
+一一十五歲/二十五歲<br>
+睹物思清/睹物思情<br>
+垠睛/眼睛<br>
+懺海/懺悔<br>
+琖暴/殘暴<br>
+濆限/憤恨<br>
+結朿/結束<br>
+可泊/可怕<br>
+回澺/回憶<br>
+打睹/打賭<br>
+梢微/稍微<br>
+畏臞/畏懼<br>
+鋯過/錯過<br>
+時俟/時候<br>
+膽法/膽怯<br>
+蠻僙/蠻橫<br>
+傾刻/頃刻<br>
+澳海/懊悔<br>
+肆無忌陣/肆無忌憚<br>
+瀤念/懷念<br>
+悄消/悄悄<br>
+事清/事情<br>
 </font>
 </td></tr></table>
