--- a/book/14A6.html
+++ b/book/14A6.html
@@ -12,19 +12,35 @@ $author = '赤川次郎';
 $title = '小偷必自私'; 
 $book = 'E14A6';
 ShowBookTitle() ;
-ShowUpdbDownload('2014/3/7 (245K) 2015/11/6');
+ShowUpdbDownload('2023/1/17 (245K) 2015/11/6 2014/3/7');
 ShowPrcDownload('2014/3/7 (223K) 2015/11/6');
 ShowMobiDownload('2015/11/6 (624K)');
-ShowEpubDownload('2014/3/7 (141K) 2015/11/6');
-ShowVEpubDownload('2014/3/7 (141K) 2015/11/6');
+ShowEpubDownload('2023/1/17 (141K) 2015/11/6 2014/3/7');
+ShowVEpubDownload('2023/1/17 (141K) 2015/11/6 2014/3/7');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝邱應琦整理製作。感謝小瑋勘誤5處。<br>
+好讀書櫃《經典版》，感謝邱應琦整理製作。感謝小瑋勘誤5處。感謝Takki Koo/sue1289勘誤14處。<br>
 <br>
 小偷系列之一。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(Takki Koo/sue1289 2023/1/17)<br>
+了。花稍的狩/了。花俏的狩<br>
+哦，其想見一見。﹂/哦，真想見一見。﹂<br>
+裡，其弓也不/裡，真弓也不<br>
+我在報上有到了/我在報上見到了；改為(我在報上看到了)<br>
+近，其弓偷偷/近，真弓偷偷<br>
+說，其弓只好/說，真弓只好<br>
+淳一而前一站/淳一面前一站<br>
+想，今她大感/想，令她大感<br>
+們添庥煩了，/們添麻煩了，<br>
+亂放大危險了。/亂放太危險了。<br>
+一具體體/一具身體；改為(一具屍體)<br>
+呀，其希望小偷/呀，真希望小偷<br>
+　﹁越怏越好！需/　﹁越快越好！需<br>
+值價/價值(原也正確)<br>
+<br>
 (mPDB 2015/11/6)<br>
 正面沖撞/正面衝撞<br>
 膺品/贗品<br>
