--- a/book/14B0.html
+++ b/book/14B0.html
@@ -12,14 +12,23 @@ $author = '赤川次郎';
 $title = '小偷多多不勝捉'; 
 $book = 'E14B0';
 ShowBookTitle() ;
-ShowUpdbDownload('2014/3/7 (169K)');
+ShowUpdbDownload('2023/1/17 (169K) 2014/3/7');
 ShowPdbDownload('2014/3/7 (158K)');
 ShowPrcDownload('2014/3/7 (153K)');
-ShowEpubDownload('2014/3/7 (96K)');
-ShowVEpubDownload('2014/3/7 (96K)');
+ShowEpubDownload('2023/1/17 (96K) 2014/3/7');
+ShowVEpubDownload('2023/1/17 (96K) 2014/3/7');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝邱應琦整理製作。<br>
+好讀書櫃《經典版》，感謝邱應琦整理製作。感謝Takki Koo/sue1289勘誤4處。<br>
 <br>
 小偷系列之五。<br>
+<br>
+<font size=2>
+<a href="?M=hd&P=pr">勘誤表</a>：<br>
+(Takki Koo/sue1289 2023/1/17)<br>
+的，是自認關起來的。/的，是自己關起來的。<br>
+他卻悠哉遊哉｜｜/他卻優哉游哉｜｜<br>
+了，我那得動！﹂/了，我拿得動！﹂<br>
+淳一悠哉遊哉地吃/淳一優哉游哉地吃<br>
+</font>
 </td></tr></table>
