--- a/book/14A9.html
+++ b/book/14A9.html
@@ -12,14 +12,14 @@ $author = '赤川次郎';
 $title = '小偷睡不著'; 
 $book = 'E14A9';
 ShowBookTitle() ;
-ShowUpdbDownload('2014/3/7 (169K) 2015/3/6');
+ShowUpdbDownload('2023/1/17 (169K) 2015/3/6 2014/3/7');
 ShowPrcDownload('2014/3/7 (151K) 2015/3/6');
-ShowEpubDownload('2014/3/7 (96K) 2015/3/6');
-ShowVEpubDownload('2014/3/7 (96K) 2015/3/6');
+ShowEpubDownload('2023/1/17 (96K) 2015/3/6 2014/3/7');
+ShowVEpubDownload('2023/1/17 (96K) 2015/3/6 2014/3/7');
 BookSectionEnd();
 ?>
 <img src="covers/14A9.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝MilkyWayian參照原書再整理校正過 (2015/3/6)。譯者宋明清。感謝ED2015勘誤。<br>
+好讀書櫃《典藏版》，感謝MilkyWayian參照原書再整理校正過 (2015/3/6)。譯者宋明清。感謝ED2015勘誤。感謝Takki Koo/sue1289勘誤3處。<br>
 <br>
 好讀書櫃《經典版》，感謝邱應琦整理製作。<br>
 <br>
@@ -28,7 +28,12 @@ BookSectionEnd();
 除了這篇〈小偷睡不著〉，本書還收集了〈愛的路上多荊棘〉、〈神啊，救人喔！〉、〈謠言不長久〉等三篇。都是由這對寶貝夫妻──妻子真弓當刑警，丈夫淳一幹小偷的絕配，再加上那個愛慕真弓的道田刑警三個人為主角。每一篇都非常絕，要想不爆笑？很難。<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<a href="?M=hd&P=pr">勘誤表</a>：<br>
+(Takki Koo/sue1289 2023/1/17)<br>
+鬆的買賈呀！/鬆的買賣呀！<br>
+褸子遲疑/禮子遲疑<br>
+道麼說/那麼說；(改為這麼說)<br>
+<br>
 (ED2015 2015/3/6)<br>
 小剌/小刺<br>
 <br>
