Upload of revised book 1010490043

--- a/Share/1010490043.html
+++ b/Share/1010490043.html
@@ -12,9 +12,9 @@ $title = '神秘打字員';
 $book = 'P1010490043';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/1/10 2022/12/16');
-ShowEpubDownload('2023/1/10 2022/12/16');
-ShowVEpubDownload('2023/1/10 2022/12/16');
+ShowUpdbDownload('2023/1/19 2023/1/10 2022/12/16');
+ShowEpubDownload('2023/1/19 2023/1/10 2022/12/16');
+ShowVEpubDownload('2023/1/19 2023/1/10 2022/12/16');
 BookSectionEnd();
 ?>
 <img src="covers/1010490043.jpg" HSPACE=8 align=right>
@@ -55,7 +55,14 @@ Fox即將改編成電影，由英國知名女星綺拉．奈特莉（Keira Knigh
 臺灣師範大學翻譯研究所博士。英國布里斯托大學英語教學碩士。喜歡翻譯小說，以譯筆輕剖書中人物生命故事中的肌理和溫度。已出版作品包括譯作《五個傷痕》、《微寫作》；翻譯教學著作《英中筆譯1》、《英中筆譯2》及英語教學著作《遜咖日記單字本》系列。<br>
 <br>
 <font size=2>
-<strong><a href="?M=hd&P=pr">勘誤表</a>：<strong><br>
+<strong><a href="?M=hd&P=pr">勘誤表：</a></strong><br>
+<br>
+(sue1289 2023/1/19)<br>
+彈後子華爾滋/彈筷子華爾滋<br>
+從沒來不會/原書錯。（改為從來不曾）<br>
+嗡險響起/嗡嗡響起<br>
+樣『仪的序曲奏起。/樣，夜的序曲奏起。<br>
+心中繫下/心中鑿下<br>
 <br>
 (sue1289/McDull 2023/1/10)<br>
 怪，道酒從來用不/怪，這酒從來用不<br>
