Upload of revised books 1675, 17U1, and 17XM

--- a/book/17U1.html
+++ b/book/17U1.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("塔娜．法蘭琪《神秘森林》");
+SetTitle("塔娜．法蘭琪【神秘森林】");
 SetLink('<a href="?M=hd&P=mystery-2">懸疑小說 書目</a>');
 </script>
 
@@ -12,16 +12,16 @@ $title = '神秘森林';
 $book = 'E17U1';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (655K)');
+ShowUpdbDownload('2023/1/20 (655K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (698K)');
 ShowMobiDownload('2017/11/3 (1911K)');
-ShowEpubDownload('2017/11/3 (456K)');
-ShowVEpubDownload('2017/11/3 (456K)');
+ShowEpubDownload('2023/1/20 (456K) 2017/11/3');
+ShowVEpubDownload('2023/1/20 (456K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17U1.jpg" HSPACE=8 vspace=2 align=right>
 <img src="covers/17U1a.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。譯者穆卓芸。<br>
+好讀書櫃【典藏版】，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。譯者穆卓芸。<br>
 <br>
 <b>都柏林謀殺小組之一</b><br>
 <br>
@@ -46,7 +46,21 @@ BookSectionEnd();
 而《神秘森林》出版後也果然贏得全球各地書評的一致讚譽，不僅榮獲「愛倫坡獎」、「安東尼獎」、「麥可維提獎」、「巴瑞獎」等四項「年度最佳處女作」大獎，更躍登紐約時報、出版家週刊、今日美國報、舊金山紀事報、洛杉磯時報、丹佛郵報、波士頓環球報、Book Sense、北卡獨立書商協會等全美九大暢銷排行榜，並入選亞馬遜網路書店「年度編輯推薦選書」。目前已售出超過三十國版權，銷量更已突破五十萬冊！全書優美的文筆、神秘的氣氛，帶領讀者難以自拔地走入這片蒼鬱的謎霧森林中。而繼《神秘森林》獲得無數讚譽之後，塔娜．法蘭琪又再推出《神秘森林》二部曲新書《The Likeness》，果然同樣席捲國際文壇，並再次入選亞馬遜網路書店二○○八「年度編輯推薦選書」，也使得塔娜．法蘭琪成為當前最受矚目的文壇新銳！ <br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Elva Lin/McDull 2023/1/20)<br>
+阽心/貼心<br>
+如果一而要/如果需要<br>
+邦決/判決<br>
+拔睡就跑/拔腿就跑<br>
+自我捧升/自我提升<br>
+羅伯餐探/羅伯警探<br>
+跪弱/脆弱<br>
+歷盡渰桑/歷盡滄桑<br>
+跟瞀方配合/跟警方配合<br>
+非常瀲烈/非常激烈<br>
+镯裁/獨裁<br>
+我要去唸了真的要去喻了/我要去唸了真的要去唸了<br>
+<br>
 (mPDB 2017/11/3)<br>
 高朓苗條/高䠷苗條<br>
 曰/日 (數處)<br>
