--- a/book/17XM.html
+++ b/book/17XM.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("宮部美幸《龍眠》");
+SetTitle("宮部美幸【龍眠】");
 SetLink('<a href="?M=hd&P=mystery-5">懸疑小說 書目</a>');
 </script>
 
@@ -12,15 +12,15 @@ $title = '龍眠';
 $book = 'E17XM';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/12/1 (421K)');
+ShowUpdbDownload('2023/1/20 (421K) 2017/12/1');
 ShowPrcDownload('2017/12/1 (410K)');
 ShowMobiDownload('2017/12/1 (1174K)');
-ShowEpubDownload('2017/12/1 (294K)');
-ShowVEpubDownload('2017/12/1 (294K)');
+ShowEpubDownload('2023/1/20 (294K) 2017/12/1');
+ShowVEpubDownload('2023/1/20 (294K) 2017/12/1');
 BookSectionEnd();
 ?>
 <img src="covers/17XM.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝ansa掃描原書整理製作。譯者王蘊潔。感謝黑白貓勘誤24處。<br>
+好讀書櫃【典藏版】，感謝ansa掃描原書整理製作。譯者王蘊潔。感謝黑白貓勘誤24處。<br>
 <br>
 在一個颱風的夜晚，一名中年男人拿著手電筒、冒著風雨尋找七歲的兒子，而這名七歲的小男孩撐著一把黃色的傘尋找莫尼卡，但是水流湍急的路上只有那把黃色的傘，而傘旁邊的人孔蓋被打開了，最後小男孩要找的莫尼卡回到家，但是中年男人要找的小男孩卻下落不明。<br>
 <br>
@@ -31,7 +31,29 @@ BookSectionEnd();
 如果你具有這種超能力，該如何將兇手繩之以法？你會因為具有這種能力而幸福還是痛不欲生呢？<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(sue1289/McDull 2023/1/20)<br>
+醫生宣佈﹃你/醫生宣布﹃你<br>
+事很過份，不/事很過分，不<br>
+做太過份了。/做太過分了。<br>
+﹁太過份了。/﹁太過分了。<br>
+如果一如果他真/如果︱︱如果他真<br>
+有點過份。如/有點過分。如<br>
+說太過份了。/說太過分了。<br>
+麼要淌渾水？你/麼要蹚渾水？你<br>
+緊貼著我的體溫/緊貼著我的體溫。<br>
+正想反駛，但/正想反駁，但<br>
+﹁他去哪裡幹什麼？﹂/﹁他去那裡幹什麼？﹂<br>
+彷彿漸漸消失/彷彿漸漸消失。<br>
+涼、沓無人煙的海/涼、杳無人煙的海<br>
+的名字，  上面寫著﹁今市芳文﹂/同一段<br>
+化了淡妝，  她穿著得體/同一段<br>
+寫起字來，﹁織田，﹂  我急忙大聲/同一段<br>
+不上」/不上。」<br>
+科林，威爾遜/科林‧威爾遜<br>
+談什麼一當然/談什麼︱︱當然<br>
+雷蒙，錢德勒/雷蒙‧錢德勒<br>
+<br>
 (黑白貓 2017/12/1)<br>
 古德拉/德古拉 <font color=#0066CC>(原書有誤)</font><br>
 我寫到/我寫道 <font color=#0066CC>(按原書未改)</font><br>
