--- a/book/1675.html
+++ b/book/1675.html
@@ -12,15 +12,15 @@ $author = '喬斯坦．賈德';
 $title = '蘇菲的世界'; 
 $book = 'B1675';
 ShowBookTitle() ;
-ShowUpdbDownload('2016/5/6 (666K)');
+ShowUpdbDownload('2023/1/20 (666K) 2016/5/6');
 ShowPrcDownload('2016/5/6 (640K)');
 ShowMobiDownload('2016/5/6 (1772K)');
-ShowEpubDownload('2016/5/6 (426K)');
-ShowVEpubDownload('2016/5/6 (427K)');
+ShowEpubDownload('2023/1/20 (426K) 2016/5/6');
+ShowVEpubDownload('2023/1/20 (427K) 2016/5/6');
 BookSectionEnd();
 ?>
 <img src="covers/1675.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝張克參照原書再整理校正過。感謝chin223提供掃描檔。譯者蕭寶森。<br>
+好讀書櫃【典藏版】，感謝張克參照原書再整理校正過。感謝chin223提供掃描檔。譯者蕭寶森。<br>
 <br>
 <b>內容簡介：</b><br>
 <br>
@@ -45,7 +45,10 @@ BookSectionEnd();
 賈德除致力於文學創作，啟發讀者對於生命的省思外，對於公益事業亦不遺餘力。他於1997年創立「蘇菲基金會」，每年頒發十萬美金的「蘇菲獎」，鼓勵能以創新方式對環境發展提出另類方案或將之付諸實行的個人或機構。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(逯然行遊/McDull 2023/1/20)<br>
+到目前為讓/到目前為止<br>
+<br>
 (mPDB 2016/5/6)<br>
 他說；﹁大多/他說：﹁大多<br>
 人們的的注意/人們的注意<br>
