Upload of revised book 1010490047

--- a/Share/1010490047.html
+++ b/Share/1010490047.html
@@ -12,13 +12,13 @@ $title = '換命';
 $book = 'P1010490047';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/1/4');
-ShowEpubDownload('2023/1/4');
-ShowVEpubDownload('2023/1/4');
+ShowUpdbDownload('2023/1/24 2023/1/4');
+ShowEpubDownload('2023/1/24 2023/1/4');
+ShowVEpubDownload('2023/1/24 2023/1/4');
 BookSectionEnd();
 ?>
 <img src="covers/1010490047.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。感謝sue1289勘誤60處<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -66,6 +66,68 @@ BookSectionEnd();
 輔仁大學經濟系、英國語文輔系，英國新堡大學口筆譯碩士畢。曾任富邦投顧全職翻譯、中英科貿論壇口譯員、麻省理工學院開放式課程全職編輯，現任公職，專職翻譯。譯有《禁忌祈禱書》、《居家生活法寶》、《發揮生命的極致》、《千年萬里》、《劇變》等書。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+<br>
+(sue1289 2023/1/23)<br>
+冒險飄車，/冒險飇車，<br>
+如此僧惡失望/如此憎惡失望<br>
+什麼時侯才可/什麼時候才可<br>
+治的桀傲不馴。喬/治的桀驁不馴。喬<br>
+就是桀傲不馴的象/就是桀驁不馴的象<br>
+。有時侯，我/。有時候，我<br>
+　有時侯，會/　有時候，會<br>
+大衣矇住臉。/大衣蒙住臉。<br>
+伸縮」槍管上/伸縮，槍管上<br>
+塢的經紀入終究/塢的經紀人終究<br>
+山姆略咯笑了起/山姆咯咯笑了起<br>
+橋下濕漉癖的水/橋下濕漉漉的水<br>
+形的綱架。他/形的鋼架。他<br>
+都快杠不住了。/都快扛不住了。<br>
+上，有入把他棄置/上，有人把他棄置<br>
+狀的短餐角。他/狀的短鬢角。他<br>
+指的指甲揠起桌角/指的指甲摳起桌角<br>
+齜牙例嘴。﹁/齜牙咧嘴。﹁<br>
+作為首槍及刀的把/作為手槍及刀的把<br>
+︱︱留了一此寄怪的乳/︱︱留了一些奇怪的乳<br>
+頭，那我那我敢告訴你/頭，那我敢告訴你<br>
+掛上電話話。/掛上電話。<br>
+身，只一路出單臂垂掛/身，只露出單臂垂掛<br>
+拉，一路出凹下去的/拉，露出凹下去的<br>
+然後憂然而止。這/然後戛然而止。這<br>
+山姆厲聲說/山姆厲聲說。<br>
+令他揣揣不安。洋/令他惴惴不安。洋<br>
+色的紙會就讓別人以為/色的紙就會讓別人以為<br>
+到了這一點。/到了這一點。」<br>
+斯頓擰笑。﹁根/斯頓獰笑。﹁根<br>
+留在午餐間：畢業生開老/留在午餐間；畢業生開老<br>
+字母在火．光中閃閃發光/字母在火光中發光<br>
+畢業紀念冊上/畢業紀念冊上。<br>
+讓你失望過。/讓你失望過。」<br>
+們再等等看吧。/們再等等看吧。」<br>
+那坨溶化的塑膠。﹁/那坨熔化的塑膠。﹁<br>
+已經溶得不像話啦，/已經熔得不像話啦，<br>
+全身肌肉編緊，每/全身肌肉繃緊，每<br>
+有人付出代價。/有人付出代價。」<br>
+停靠在一楝華麗的維多/停靠在一棟華麗的維多<br>
+來卻無比強焊，似/來卻無比強悍，似<br>
+人是死於瘤疫或者/人是死於瘟疫或者<br>
+戴維例嘴一笑/戴維咧嘴一笑<br>
+有車旅館/有家汽車旅館<br>
+好渴：這裡有/好渴……這裡有<br>
+洋洋灑灑的彎起手/(原書錯)改為瀟瀟灑灑的彎起手<br>
+那我那我敢告/那我敢告<br>
+冰女孩/小女孩<br>
+關心他．；一看到/關心他；一看到<br>
+魔鬼愛換你身上/魔鬼愛撫你身上<br>
+把兩名探長靠近/兩名探長靠近<br>
+真夠属的/真夠屌的<br>
+就能窩的地方/就能窩的地方。<br>
+眼珠「沒問題/眼珠。「沒問題<br>
+人打了開。/人打開了。<br>
+過按一下/透過按一下<br>
+她嘴型的/嘴型的開閉。<br>
+部會相信/不會相信<br>
+才能續向前行/才能繼續向前行<br>
+山姆和的路線/山姆和盧卡斯的路線<br>
 </font>
 </td></tr></table>
