Updated category for book 1010490048

--- a/Share/1010490048.html
+++ b/Share/1010490048.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("奧罕‧帕慕克【我的名字叫紅】");
-SetLink('<a href="?M=hd&P=mystery-1">懸疑小說 書目</a>');
+SetLink('<a href="?M=hd&P=fiction-7">小說園地 書目</a>');
 </script>
 
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
