Initial upload of books 1010490057 and 1010490067

--- a/Share/1010490057.html
+++ b/Share/1010490057.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("柯慈【屈辱】");
+SetTitle("柯慈【少年時】");
 SetLink('<a href="?M=hd&P=fiction-5">小說園地 書目</a>');
 </script>
 
@@ -8,31 +8,23 @@ SetLink('<a href="?M=hd&P=fiction-5">小說園地 書目</a>');
 <?php
 require_once('show-book.php');
 $author = '柯慈';
-$title = '屈辱';
-$book = 'P1010490056';
+$title = '少年時';
+$book = 'P1010490057';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/2/13');
-ShowEpubDownload('2023/2/13');
-ShowVEpubDownload('2023/2/13');
+ShowUpdbDownload('2023/2/15');
+ShowEpubDownload('2023/2/15');
+ShowVEpubDownload('2023/2/15');
 BookSectionEnd();
 ?>
-<img src="covers/1010490056.jpg" HSPACE=8 align=right>
+<img src="covers/1010490057.jpg" HSPACE=8 align=right>
 好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
-一位大學教授與學生發生不正常的關係，因拒絕認錯被迫離開教職，前往女兒的農場尋求平靜。但在造訪中所發生意外及暴力事件，卻凸顯長期種族隔離政策下，不同文化間無法融合的差異及敵對，也衝擊了這對父女的關係。<br>
+諾貝爾文學獎得主柯慈以第三人稱的方式，描寫少年時期的他如何在透過閱讀自我學習，並獲得夢寐以求到倫敦求學的過程。故事裡的約翰是個南非數學研究生，但他最鍾情的是文學，最後他逃離開普敦，來到他一心嚮往的倫敦，這本自傳體小說大膽揭露這位國際知名作家青春期的懵懂愛欲。<br>
 <br>
-面對發生在自己及至親上的不幸，大學教授被迫接受異於本身價值觀的現狀，卻也對自己的生活感到無比的絕望。但在被迫離職、被搶劫、女兒被侵犯的屈辱之間，他的心情卻漸漸平靜，逐漸歸零，在混亂的糾葛中，彷彿看到一絲希望的曙光。<br>
-<br>
-本書得獎紀錄：<br>
-1999年紐約時報編輯選書<br>
-1999年布克獎得獎作品<br>
-2000年「大英國協」最佳書獎<br>
-2000年聯合報讀書人年度最佳書獎<br>
-2000年金石堂年度十大最具影響力的書<br>
-2000年中央閱讀十大好書<br>
+全書虛實交構，被視為比柯慈得獎的小說更精采好讀，筆調清冷優雅，其中主角對自己從南非來到倫敦後，產生自我認同的追尋以及對創作的渴望追求相當令人動容。<br>
 <br>
 <br>
 <strong>作者簡介：</strong><br>
