Upload revised book description 1010490102

--- a/Share/1010490102.html
+++ b/Share/1010490102.html
@@ -27,6 +27,9 @@ BookSectionEnd();
 編注：基於mPDB功能，本書內文附圖只顯示於直橫二式epub檔案，uPDB檔案不含圖，敬請見諒。<br>
 <br>
 <br>
+<img src="covers/1010490102a.jpg" hspace=2 align=center><br>
+<p class=c>第7章：附圖</p>
+<br>
 <strong>作者簡介：</strong><br>
 <br>
 朱光潛(1897—1986)，筆名孟實，安徽桐城人，中國著名美學家、文藝理論家、教育家、翻譯家，中國現代美學的開拓者和奠基者之一。早年畢業於香港大學，然後留學英法，獲文學碩士、博士學位，回國後在北京大學、四川大學、武漢大學等多所大學任教。中華人民共和國成立後，歷任全國政協委員、常委，民盟中央委員，中國美學學會會長、名譽會長，中國作協顧問，中國社科院學部委員等。<br>
