Upload of revised book 1010490047

--- a/Share/1010490047.html
+++ b/Share/1010490047.html
@@ -12,13 +12,13 @@ $title = '換命';
 $book = 'P1010490047';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/1/24 2023/1/4');
-ShowEpubDownload('2023/1/24 2023/1/4');
-ShowVEpubDownload('2023/1/24 2023/1/4');
+ShowUpdbDownload('2023/2/2 2023/1/24 2023/1/4');
+ShowEpubDownload('2023/2/2 2023/1/24 2023/1/4');
+ShowVEpubDownload('2023/2/2 2023/1/24 2023/1/4');
 BookSectionEnd();
 ?>
 <img src="covers/1010490047.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。感謝sue1289勘誤60處<br>
+好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。感謝sue1289勘誤60處。感謝Gilbert勘誤8處。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -67,6 +67,16 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+<br>
+(Gilbert 2023/2/2)<br>
+有的險道，﹂/有的隧道，﹂<br>
+子的危險警示燈，．並把/子的危險警示燈，並把<br>
+註：Rink Floyol︱︱/註：Pink Floyd︱︱<br>
+溜的長髮間裹著．一張鵝蛋臉，墨/溜的長髮間裹著一張鵝蛋臉，墨<br>
+山姆挑起單眉，．似乎/山姆挑起單眉，似乎<br>
+渾身起了雞皮疙瘩/渾身起了雞皮疙瘩。<br>
+能借DVD?﹂/能借DVD？﹂<br>
+叫做﹃舊城牛排館﹂。﹂/叫做﹃舊城牛排館﹄。﹂<br>
 <br>
 (sue1289 2023/1/23)<br>
 冒險飄車，/冒險飇車，<br>
