Initial upload of revised book 1010490061

--- a/Share/1010490061.html
+++ b/Share/1010490061.html
@@ -12,13 +12,13 @@ $title = '吉祥紋蓮花樓卷四：白虎';
 $book = 'P1010490061';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/1/13');
-ShowEpubDownload('2023/1/13');
-ShowVEpubDownload('2023/1/13');
+ShowUpdbDownload('2023/2/6 2023/1/13');
+ShowEpubDownload('2023/2/6 2023/1/13');
+ShowVEpubDownload('2023/2/6 2023/1/13');
 BookSectionEnd();
 ?>
 <img src="covers/1010490061.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝嘉明整理製作，感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝嘉明整理製作，感謝chin223提供掃瞄檔。感謝Gilbert勘誤11處<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -51,6 +51,21 @@ BookSectionEnd();
 《吉祥紋蓮花樓》系列是她最新的武俠作品，因為受到讀者熱烈歡迎，已被改編為漫畫以及動漫，並有許多同人創作。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+<br>
+(Gilbert 2023/02/06)<br>
+他要札的應該/他要扎的應該<br>
+說話一在都這麼好聽︙︙/說話一直都這麼好聽︙︙<br>
+窗，笨直落入自己/窗，筆直落入自己<br>
+能將迷縱步施展/能將迷蹤步施展<br>
+漸漸覺得命怪，自/漸漸覺得奇怪，自<br>
+訊，慧尚妃自此/訊，慧貴妃自此<br>
+找，尤其是是上剛剛在紫霄閣，他/找，尤其是皇上剛剛在紫霄閣，他<br>
+的話撤激一頓，笑/的話微微一頓，笑<br>
+候，他使已殺了/候，他便已殺了<br>
+宛轉下嬌百媚的笑/宛轉千嬌百媚的笑<br>
+<br>
+說明：他要札的應該/他要扎的應該<br>
+此段比對 OCR 後確認原書有誤，此外在同一段文字中還有幾處「札/扎」之誤值，但製作第一版 updb 檔案之朋友已先修正了。<br>
 </font>
 </td></tr></table>
