--- a/Share/1010490077.html
+++ b/Share/1010490077.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("羅賓德拉納德．泰戈爾（【眼中沙】");
+SetTitle("羅賓德拉納德．泰戈爾【眼中沙】");
 SetLink('<a href="?M=hd&P=fiction-5">小說園地 書目</a>');
 </script>
 
@@ -7,7 +7,7 @@ SetLink('<a href="?M=hd&P=fiction-5">小說園地 書目</a>');
 <tr><td>
 <?php
 require_once('show-book.php');
-$author = '羅賓德拉納德．泰戈爾（';
+$author = '羅賓德拉納德．泰戈爾';
 $title = '眼中沙';
 $book = 'P1010490077';
 BookSectionBegin();
