Updated books 1010490005, 1010490006, and 1010490007

--- a/Share/1010490005.html
+++ b/Share/1010490005.html
@@ -12,13 +12,13 @@ $title = '吉祥紋蓮花樓卷一：朱雀';
 $book = 'P1010490005';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/11/21');
-ShowEpubDownload('2022/11/21');
-ShowVEpubDownload('2022/11/21');
+ShowUpdbDownload('2023/2/7 2022/11/21');
+ShowEpubDownload('2023/2/7 2022/11/21');
+ShowVEpubDownload('2023/2/7 2022/11/21');
 BookSectionEnd();
 ?>
 <img src="covers/1010490005.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝嘉明整理製作。感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝嘉明整理製作。感謝chin223提供掃瞄檔。感謝Gilbert勘誤52處。<br>
 <br>
 <b>本書簡介：</b><br>
 <br>
@@ -45,6 +45,60 @@ BookSectionEnd();
 《吉祥紋蓮花樓》系列是她最新的武俠作品，因為受到讀者熱烈歡迎，已被改編為漫畫以及動漫，並有許多同人創作。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+<br>
+(Gilbert 2023/02/07)<br>
+食、高雅著貴的白/食、高雅矜貴的白<br>
+，以清水沒泡，半/，以清水浸泡，半<br>
+︙﹂春嬌突然/︙﹂雲嬌突然<br>
+弱，從小就村氣促之症，她/弱，從小就有氣促之症，她<br>
+頭把道件事告訴/頭把這件事告訴<br>
+事，道件事事關/事，這件事事關<br>
+蓮花滯了一下一皺起眉頭：﹁/蓮花滯了一下，皺起眉頭：﹁<br>
+被人砍丫頭，而/被人砍了頭，而<br>
+房裡砍丫頭︙︙/房裡砍了頭︙︙<br>
+︱︱砍丫頭你就/︱︱砍了頭你就<br>
+如何震碎道半人高的巨石？如/如何震碎這半人高的巨石？如<br>
+咚﹂一連中肢體/咚﹂一連串肢體<br>
+本是攣生，或/本是孿生，或<br>
+﹂，指的使是﹁葛/﹂，指的便是﹁葛<br>
+年來我對之事已經絕望，卻/年來我對玉璽之事已經絕望，卻<br>
+翠花媽然一笑，揮/翠花嫣然一笑，揮<br>
+仙﹂去質，可/仙﹂去買，可<br>
+是楊師桎，失/是楊師侄，失<br>
+妙！何他劍勢已發，撤/妙！但他劍勢已發，撤<br>
+多病已經醫他點了十下，黃/多病已經替他點了十下，黃<br>
+、﹃碧玉害生﹄王/、﹃碧玉書生﹄王<br>
+吧，向從蘇蘇/吧，自從蘇蘇<br>
+都是悝語，李/都是俚語，李<br>
+了，夫人過世後一個月大老太爺就過身了。﹂/了，夫人過世後一個月大老太爺就過世了。﹂<br>
+池裡每一寸一分部被翻過了，/池裡每一寸一分都被翻過了，<br>
+衣，通體以織錦法繡行樹木花叢、打/衣，通體以織錦法繡有樹木花叢、打<br>
+花的體琅重，一/花的體重，一<br>
+裡，常然會溺/裡，當然會溺<br>
+人，央棍還在/人，夾棍還在<br>
+點點黃由小花的雜/點點黃白小花的雜<br>
+雅，害房裡的/雅，書房裡的<br>
+報以文雅穩重的微笑：﹁普慈大師。﹂/報以文雅穩重的微笑：﹁普慧大師。﹂<br>
+　　普慈和尚/　　普慧和尚<br>
+尚。普慈所說/尚。普慧所說<br>
+，對普慈和尚/，對普慧和尚<br>
+家裡睡鬼，不/家裡睡覺，不<br>
+，就想到道三個地方是不/，就想到這三個地方是不<br>
+呀﹂一猓，紀/呀﹂一聲，紀<br>
+﹂了一猓，﹁/﹂了一聲，﹁<br>
+﹂了一猓：﹁/﹂了一聲：﹁<br>
+車，啦裡裝滿了木板，將/車，車裡裝滿了木板，將<br>
+啊，瞠說死得/啊，聽說死得<br>
+世上哪有道等待客/世上哪有這等待客<br>
+人來理踩他二/人來理睬他二<br>
+摸著向己的臉，﹁/摸著自己的臉，﹁<br>
+羽箭長兩寸分，重/羽箭長兩寸三分，重<br>
+三更上茅棚路過/三更上茅廁路過<br>
+鬼魂在外而飄了一下，不/鬼魂在外面飄了一下，不<br>
+河夢聞芑後長身/河夢聞言後長身<br>
+這張常票有關/這張當票有關<br>
+指，黏了點方多/指，點了點方多<br>
+，再黏了點自己/，再點了點自己<br>
 </font>
 </td></tr></table>
