--- a/Share/1010490006.html
+++ b/Share/1010490006.html
@@ -12,13 +12,13 @@ $title = '吉祥紋蓮花樓卷二：玄武';
 $book = 'P1010490006';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/11/21');
-ShowEpubDownload('2022/11/21');
-ShowVEpubDownload('2022/11/21');
+ShowUpdbDownload('2023/2/7 2022/11/21');
+ShowEpubDownload('2023/2/7 2022/11/21');
+ShowVEpubDownload('2023/2/7 2022/11/21');
 BookSectionEnd();
 ?>
 <img src="covers/1010490006.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝嘉明整理製作。感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝嘉明整理製作。感謝chin223提供掃瞄檔。感謝Gilbert勘誤8處。<br>
 <br>
 <b>本書簡介：</b><br>
 <br>
@@ -43,6 +43,16 @@ BookSectionEnd();
 《吉祥紋蓮花樓》系列是她最新的武俠作品，因為受到讀者熱烈歡迎，已被改編為漫畫以及動漫，並有許多同人創作。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+<br>
+(Gilbert 2023/02/07)<br>
+內力不是抗毒/內力不足抗毒<br>
+這麼昨呼起來/這麼咋呼起來<br>
+遙想公謹當年/遙想公瑾當年<br>
+他使是展雲飛/他便是展雲飛<br>
+蓮花在也之前又畫/蓮花在︵山的大篆︶之前又畫<br>
+可曾讚過大篆/可曾讀過大篆<br>
+在﹃中﹄的一豎上下都有/在﹃中﹄字的一豎上下都有<br>
+不同喃喃地道/不時喃喃地道<br>
 </font>
 </td></tr></table>
