--- a/Share/1010490007.html
+++ b/Share/1010490007.html
@@ -12,13 +12,13 @@ $title = '吉祥紋蓮花樓卷三：青龍';
 $book = 'P1010490007';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/11/22');
-ShowEpubDownload('2022/11/22');
-ShowVEpubDownload('2022/11/22');
+ShowUpdbDownload('2023/2/7 2022/11/22');
+ShowEpubDownload('2023/2/7 2022/11/22');
+ShowVEpubDownload('2023/2/7 2022/11/22');
 BookSectionEnd();
 ?>
 <img src="covers/1010490007.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝嘉明整理製作。感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝嘉明整理製作。感謝chin223提供掃瞄檔。感謝Gilbert勘誤30處。<br>
 <br>
 <b>本書簡介：</b><br>
 <br>
@@ -49,6 +49,38 @@ BookSectionEnd();
 《吉祥紋蓮花樓》系列是她最新的武俠作品，因為受到讀者熱烈歡迎，已被改編為漫畫以及動漫，並有許多同人創作。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+<br>
+(Gilbert 2023/02/07)<br>
+﹂李蓮花好了馬正在/﹂李蓮花拴好了馬正在<br>
+旨是一稱本能。/旨是一種本能。<br>
+倒栽蘿葡，一/倒栽蘿蔔，一<br>
+寶物金數相贈，還/寶物全數相贈，還<br>
+鎮邊大將市蕭政/鎮邊大將軍蕭政<br>
+陽卻更是灑灑的道/陽卻更是瀟灑的道<br>
+條路沒打危險。﹂/條路沒有危險。﹂<br>
+偏有驚世絕飽之才︙︙/偏有驚世絕艷之才︙︙<br>
+屑，糾纏作兩件黑色斗篷之上，就/屑，糾纏在兩件黑色斗篷之上，就<br>
+來，你沿那些撕裂的痕跡，好/來，你看那些撕裂的痕跡，好<br>
+傷，似就算一個人已經變成/傷，但就算一個人已經變成<br>
+上，本以為地應當只有/上，本以為地上應當只有<br>
+手還樞在門上。/手還摳在門上。<br>
+人，而以無聲無息，就/人，而且無聲無息，就<br>
+過時突然續出，那/過時突然鑽出，那<br>
+過﹃柔腸玉酺﹄？/過﹃柔腸玉釀﹄？<br>
+極為豐寫，只/極為豐富，只<br>
+物，竹在是本村/物，實在是本村<br>
+公子他使要逃之/公子他便要逃之<br>
+子，你兄過饕餮/子，你見過饕餮<br>
+還在後常，等/還在後堂，等<br>
+被子千萬見被偷了去，所/被子千萬莫被偷了去，所<br>
+的真金蕖子。母/的真金葉子。母<br>
+蹤的封小閨房探了/蹤的封小七閨房探了<br>
+蹤，似我既沒有攔下她，也/蹤，但我既沒有攔下她，也<br>
+︙︙道就是奇中之奇了。/︙︙這就是奇中之奇了。<br>
+三、第二具餘體/三、第二具屍體<br>
+嫁人墜胎都無/嫁人墮胎都無<br>
+，只可能是白大俠和。：而﹃/，只可能是白大俠和你；而﹃<br>
+：﹁太賣、太賣。﹂/：﹁太貴、太貴。﹂<br>
 </font>
 </td></tr></table>
