--- a/Share/1010490061.html
+++ b/Share/1010490061.html
@@ -12,13 +12,13 @@ $title = '吉祥紋蓮花樓卷四：白虎';
 $book = 'P1010490061';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/2/6 2023/1/13');
-ShowEpubDownload('2023/2/6 2023/1/13');
-ShowVEpubDownload('2023/2/6 2023/1/13');
+ShowUpdbDownload('2023/2/7 2023/1/13');
+ShowEpubDownload('2023/2/7 2023/1/13');
+ShowVEpubDownload('2023/2/7 2023/1/13');
 BookSectionEnd();
 ?>
 <img src="covers/1010490061.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝嘉明整理製作，感謝chin223提供掃瞄檔。感謝Gilbert勘誤11處<br>
+好讀書櫃【典藏版】，感謝嘉明整理製作，感謝chin223提供掃瞄檔。感謝Gilbert勘誤11處。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -53,7 +53,7 @@ BookSectionEnd();
 <font size=2>
 <strong>勘誤表</strong>：<br>
 <br>
-(Gilbert 2023/02/06)<br>
+(Gilbert 2023/02/07)<br>
 他要札的應該/他要扎的應該<br>
 說話一在都這麼好聽︙︙/說話一直都這麼好聽︙︙<br>
 窗，笨直落入自己/窗，筆直落入自己<br>
