--- a/book/audioAB001.html
+++ b/book/audioAB001.html
@@ -24,6 +24,7 @@ PlayMP3('AB001-14', '第十四篇《白居易：食養妙招》書亞錄音 2023
 PlayMP3('AB001-15', '第十五篇《韓熙載：夜宴傳奇》書亞錄音 2023/1/26');
 PlayMP3('AB001-16', '第十六篇《呂蒙正：悔吃雞舌湯》書亞錄音 2023/2/2');
 PlayMP3('AB001-17', '第十七篇《酒怪石曼卿》書亞錄音 2023/2/2');
+PlayMP3('AB001-18', '第十八篇《王安石餐桌軼聞》書亞錄音 2023/2/9');
 
 ?>
 
