--- a/book/16O9.html
+++ b/book/16O9.html
@@ -12,14 +12,14 @@ $title = '琅琊榜';
 $book = 'H16O9';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2016/11/4 (1424K) 2017/10/6');
-ShowPrcDownload('2016/11/4 (1505K) 2017/10/6');
-ShowMobiDownload('2016/11/4 (4147K) 2017/10/6');
-ShowEpubDownload('2016/11/4 (1020K) 2017/10/6');
-ShowVEpubDownload('2016/11/4 (1020K) 2017/10/6');
+ShowUpdbDownload('2023/2/11 (1424K) 2017/10/6 2016/11/4');
+ShowPrcDownload('2017/10/6 (1505K) 2016/11/4');
+ShowMobiDownload('2017/10/6 (4147K) 2016/11/4');
+ShowEpubDownload('2023/2/11 (1020K) 2017/10/6 2016/11/4');
+ShowVEpubDownload('2023/2/11 (1020K) 2017/10/6 2016/11/4');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝Rabrus整理製作。感謝嘉明修訂：「原版本，想為初發本，連最終章共一百七十四章，首章為『兩姓之子』；據網上修訂本連尾聲共七十章，首章為『初臨帝京』。兩者有差異，當中並略有刪去枝節及潤色文字。」感謝muneki勘誤9處、Alison按原書勘誤20處、Eirene勘誤9處、汪素珠勘誤7處、Ivan勘誤20處、汪素珠勘誤32處。<br>
+好讀書櫃《經典版》，感謝Rabrus整理製作。感謝嘉明修訂：「原版本，想為初發本，連最終章共一百七十四章，首章為『兩姓之子』；據網上修訂本連尾聲共七十章，首章為『初臨帝京』。兩者有差異，當中並略有刪去枝節及潤色文字。」感謝muneki勘誤9處、Alison按原書勘誤20處、Eirene勘誤9處、汪素珠勘誤7處、Ivan勘誤20處、汪素珠勘誤32處、Bee/IT勘誤82處。<br>
 <br>
 <a href="http://baike.baidu.com/subview/4868741/16128828.htm" target=_blank>【作者簡介】</a><br>
 <br>
@@ -41,7 +41,92 @@ BookSectionEnd();
 靖王終於嶄露頭角，根基漸穩。朝堂上都意識到，除了譽王和前太子外還有另一個選擇……皇族春獵，梅長蘇身分被故人識破，引起靖王頻頻猜測、試探；譽王破釜沉舟，為奪帝位派軍逼駕謀反，危機漸漸逼近，他們如何在重重包圍之下，以三千禁軍力抗三萬大軍？天道昭昭，人間真情，當真相終於大白於天下，當萬千赤子忠魂終於可含慰於九泉之下時，完成心願的他又會將烈烈目光投向何方？一襲白衣祭故人，是落幕，還是開局？是過去，還是未來？也許千秋情義長存，但宮牆內的風，似乎也永不停息……<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+<br>
+(Bee/IT 2023/2/11)<br>
+先開車簾/掀開車簾<br>
+努氣調整/努力調整<br>
+不論說來/不妨說來<br>
+已驚訝了發現/已驚訝地發現<br>
+入圍的人候選者中/入圍的候選者中<br>
+發覺沒對/發覺不對<br>
+畢竟不是的正陽宮/畢竟不是正陽宮<br>
+難踏故士/難踏故土<br>
+！/太子！/！太子！<br>
+掩已非/掩己非<br>
+吒罵了一番/叱罵了一番<br>
+加錫王珠/加賜王珠<br>
+咬任下脣/咬住下唇<br>
+能掰得清/能辨得清<br>
+來人笑微笑著看著他倆，笑微微地/來人微笑著看著他倆，微微地<br>
+便一旁聽著/但一旁聽著<br>
+不差毫分/不差分毫<br>
+拖到了到一邊/拖到了一邊<br>
+心無旁鷙/心無旁騖<br>
+這吃凍梨/在這吃凍梨<br>
+互相撕鬥/互相廝鬥<br>
+梅長 辦簡單/梅長蘇簡單<br>
+也分毫也/也分毫<br>
+進見小主人/晉見小主人<br>
+電火石火的剎那/電光石火的剎那<br>
+很快就會就有人/很快就會有人<br>
+慵慵 地/慵懶地<br>
+一樁對已方不利的，一樁對已方大大有利的/一樁對己方不利的，一樁對己方大大有利的<br>
+毒蜥蠍/毒蜥蜴<br>
+是麼遇見/是怎麼遇見<br>
+也不未入樂籍/也未入樂籍<br>
+破頤一笑/破顏一笑<br>
+明天春天/明年春天<br>
+從梁上飄下/從樑上飄下<br>
+卻又從讓它指間溜過/卻又讓它從指間溜過<br>
+製炮售買/製炮售賣<br>
+五味雜陣/五味雜陳<br>
+都又都趕回桌上/都又趕回桌上<br>
+入晚等丈夫了/入夜等丈夫<br>
+大輕忽了/太輕忽了<br>
+即善變又難懂/既善變又難懂<br>
+只免他/以免他<br>
+當下只也得/當下也只得<br>
+會是是 何人/會是何人<br>
+於世無爭三十年/與世無爭三十年<br>
+斤量不足/斤兩不足<br>
+這句的話/這句話<br>
+怎敢進見/怎敢晉見<br>
+早就侍女過來/早就有侍女過來<br>
+故且不論/姑且不論<br>
+那裡，那裡，/那裡，<br>
+話調平板無波/語調平板無波<br>
+擔心夏江也衛護/擔心夏江也有衛護<br>
+絞盡腦汗/絞盡腦汁<br>
+微顫的身躬/微顫的身軀<br>
+兼買乾雜點心/兼賣乾雜點心<br>
+跟我做對/跟我作對<br>
+也最多多抱怨抱怨/也最多抱怨抱怨<br>
+精力積中在/精力集中在<br>
+一無反顧/義無反顧<br>
+欺盼/期盼<br>
+巋然不動/巍然不動<br>
+得意洋洋地樣子/得意洋洋的樣子<br>
+這裡的氣要/這裡的氣氛要<br>
+但是我想告訴，/但是我想告訴你，<br>
+到底哪樣有異樣/到底哪裡有異樣<br>
+心平心和/心平氣和<br>
+如何想要旁聽/如果想要旁聽<br>
+牢房時潮濕發霉/牢房潮濕發霉<br>
+將雙手埋進了掌中/？<br>
+旌旗搖搖出城/旌旗搖曳出城（？）<br>
+命他們童路帶了下去/命他們帶了童路下去<br>
+新綠嫩牙/新綠嫩芽<br>
+隱隱將東宮之位/穩穩將東宮之位<br>
+其他的方。/其他地方。<br>
+運氣好的好/運氣好的話<br>
+他要說送/他說要送<br>
+一一剪除/一一翦除<br>
+事於至此/事已至此<br>
+但就算了為了當年/但就算為了當年<br>
+帶個了個丫/帶了個丫<br>
+其他的方起的狼煙/其他地方起的狼煙<br>
+<br>
 (汪素珠 2017/10/6)<br>
 #不是我拿喬/不是我拿翹 <font color=#0066CC>(未改，原也正確。)</font><br>
 這才盡早搬出來/這才儘早搬出來<br>
