--- a/book/34.html
+++ b/book/34.html
@@ -12,25 +12,25 @@ $title = '萍蹤俠影錄上';
 $book = 'D34a';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2010/11/16 (419K) 2017/7/7');
-ShowPrcDownload('2010/11/16 (440K) 2017/7/7');
-ShowMobiDownload('2016/4/1 (1218K) 2017/7/7');
-ShowEpubDownload('2010/11/16 (294K) 2017/7/7');
-ShowVEpubDownload('2013/8/16 (294K) 2017/7/7');
+ShowUpdbDownload('2023/2/11 (419K) 2017/7/7 2010/11/16');
+ShowPrcDownload('2017/7/7 (440K) 2010/11/16');
+ShowMobiDownload('2017/7/7 (1218K) 2016/4/1');
+ShowEpubDownload('2023/2/11 (294K) 2017/7/7 2010/11/16');
+ShowVEpubDownload('2023/2/11 (294K) 2017/7/7 2013/8/16');
 Space();
 $title = '萍蹤俠影錄下';
 $book = 'D34b';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2010/11/16 (408K) 2016/10/7');
-ShowPrcDownload('2010/11/16 (426K) 2016/10/7');
-ShowMobiDownload('2016/4/1 (1181K) 2016/10/7');
-ShowEpubDownload('2010/11/16 (285K) 2016/10/7');
-ShowVEpubDownload('2013/8/16 (285K) 2016/10/7');
+ShowUpdbDownload('2023/2/11 (408K) 2016/10/7 2010/11/16');
+ShowPrcDownload('2016/10/7 (426K) 2010/11/16');
+ShowMobiDownload('2016/10/7 (1181K) 2016/4/1');
+ShowEpubDownload('2023/2/11 (285K) 2016/10/7 2010/11/16');
+ShowVEpubDownload('2023/2/11 (285K) 2016/10/7 2013/8/16');
 BookSectionEnd();
 ?>
 <img src="covers/34.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，美格騰參照原書整理校對過。感謝Chang、一力吳、James、Vivian、ED2015勘誤。感謝chin223提供掃描檔。感謝giff勘誤上2處下1處、YAO勘誤上9處下24處、胡剛毅勘誤上1處。<br>
+好讀書櫃【典藏版】，美格騰參照原書整理校對過。感謝Chang、一力吳、James、Vivian、ED2015勘誤。感謝chin223提供掃描檔。感謝giff勘誤上2處下1處、YAO勘誤上9處下24處、胡剛毅勘誤上1處、kevin/IT勘誤上下多處。<br>
 <br>
 朱元璋與張士誠原為結拜兄弟，後因爭奪天下，朱元璋殺了張士誠而成為大明皇帝，從此張家子弟便視朱家為世仇。<br>
 <br>
@@ -41,7 +41,16 @@ BookSectionEnd();
 <br>從《龍虎鬥京華》一書開始，梁羽生創作的武俠小說大多以一闋詞為開頭，書中男女主角也多文武全才、愛好詩詞歌賦，成為其作品最大的特色。而從隋唐到明清，將歷史與小說的內容相結合，則是其作品的第二個特色。不同於其他武俠小說家推崇少林、武當為武學中的正宗，梁羽生從《七劍下天山》起，所寫的《塞外奇俠傳》、《江湖三女俠》、《冰魄寒光劍》、《冰川天女傳》、《雲海玉弓緣》、《冰河洗劍錄》等系列作品，莫不獨尊「天山派」為武學的主流正宗，成為其作品的第三個特色。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+<br>
+(萍蹤俠影錄上 kevin/IT 2023/2/11)<br>
+此中心事情誰傳/此中心事倩誰傳<br>
+血洒/血灑<br>
+澹台/澹臺（多處）<br>
+<br>
+(萍蹤俠影錄下 kevin/IT 2023/2/11)<br>
+澹台/澹臺（多處）<br>
+<br>
 (萍蹤俠影錄上 胡剛毅 2017/7/7)<br>
 郝寶棒/郝寶椿<br>
 <br>
