Upload of revised books 1010490051 and 1010490053

--- a/Share/1010490051.html
+++ b/Share/1010490051.html
@@ -12,13 +12,13 @@ $title = '風中的瑪麗娜';
 $book = 'P1010490051';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/2/6');
-ShowEpubDownload('2023/2/6');
-ShowVEpubDownload('2023/2/6');
+ShowUpdbDownload('2023/2/14 2023/2/6');
+ShowEpubDownload('2023/2/14 2023/2/6');
+ShowVEpubDownload('2023/2/14 2023/2/6');
 BookSectionEnd();
 ?>
 <img src="covers/1010490051.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。感謝Vivian Yu/IT勘誤9處<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -61,6 +61,16 @@ BookSectionEnd();
 西語系畢業。喜愛語言學習及拉丁美洲文學。<br>
 <br>
 <font size=2>
-<strong>勘誤表：<strong><br>
+<strong>勘誤表：</strong><br>
+(Vivian Yu/IT 2023/02/14)<br>
+後，住宿生三個小時的自/後，住宿生有三個小時的自<br>
+誌的辦汙，我/誌的斑汚，我<br>
+有點頭量而已/有點頭暈而已<br>
+其他祖國同袍，他/其他祖國同胞，他<br>
+﹁快點﹂她尖/﹁快點！﹂她尖<br>
+她正斜脫著眼/她正斜睨著眼<br>
+﹁別去﹂雪利/﹁別去！﹂雪利<br>
+﹁老天父耶︙︙/﹁老天爺︙︙<br>
+﹁瑪麗娜﹂我呼/﹁瑪麗娜！﹂我呼<br>
 </font>
 </td></tr></table>
