--- a/Share/1010490053.html
+++ b/Share/1010490053.html
@@ -12,13 +12,13 @@ $title = '再見，海明威';
 $book = 'P1010490053';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/1/16');
-ShowEpubDownload('2023/1/16');
-ShowVEpubDownload('2023/1/16');
+ShowUpdbDownload('2023/2/14 2023/1/16');
+ShowEpubDownload('2023/2/14 2023/1/16');
+ShowVEpubDownload('2023/2/14 2023/1/16');
 BookSectionEnd();
 ?>
 <img src="covers/1010490053.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。感謝Vivian Yu/IT勘誤12處<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -54,6 +54,19 @@ BookSectionEnd();
 曾先後就讀于天津外國語學院和南京大學的西班牙語系，現於上海某出版社從事西漢詞典及教材的編輯工作。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Vivian Yu/IT 2023/02/14)<br>
+是在跟他停在柯/是在跟他｜｜停在柯<br>
+人，當時他這裡有沒/人，當時他問這裡有沒<br>
+前多給一段時間/前多給你一段時間<br>
+那個間工夫一上/那個閒工夫一上<br>
+色的黏膜，它/色的黏痰，它<br>
+紅的乳量。毫/紅的乳暈。毫<br>
+亞人全是蠢。所/亞人全是蠢蛋。所<br>
+前爪叭在窗沿/前爪趴在窗沿<br>
+。他叭在堤壩/。他趴在堤壩<br>
+處，兩蓋微弱/處，兩盞微弱<br>
+鎮上幾蓋零星/鎮上幾盞零星<br>
+慢地靠近岸邊/慢地靠近岸邊。<br>
 </font>
 </td></tr></table>
