Upload of revised book 1010490066

--- a/Share/1010490066.html
+++ b/Share/1010490066.html
@@ -12,13 +12,13 @@ $title = '星期一的邀約信';
 $book = 'P1010490066';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/1/20');
-ShowEpubDownload('2023/1/20');
-ShowVEpubDownload('2023/1/20');
+ShowUpdbDownload('2023/2/14 2023/1/20');
+ShowEpubDownload('2023/2/14 2023/1/20');
+ShowVEpubDownload('2023/2/14 2023/1/20');
 BookSectionEnd();
 ?>
 <img src="covers/1010490066.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。感謝Vivian Yu/IT勘誤29處<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -65,6 +65,53 @@ BookSectionEnd();
 政治大學英語系畢業。從事編譯工作十餘年。近期譯作有《黃石任務》、《史前》、《若不是荒野，我不會活下去》、《22篇名人大腦故事》等。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Vivian Yu/IT 2023/02/14)<br>
+這一大佗攬和/這一大坨攬和<br>
+大坨攬和在一/大坨攪和在一<br>
+好，寶巴斯汀，我/好，賽巴斯汀，我<br>
+會想要換他們，/會想要揍他們，<br>
+為我鼈清原因/為我釐清原因<br>
+須要脖別人說我/須要聽別人說我<br>
+磨碎乾酩了。/磨碎乾酪了。<br>
+擠的小育年旅舍/擠的小青年旅舍<br>
+球的人去給拿球/球的人丟給拿球<br>
+︙︙工作　　妳這/︙︙工作⋯⋯　　妳這<br>
+氣的抱哮s，然/氣的咆哮聲，然<br>
+椒、魔嘴豆、白/椒、鷹嘴豆、白<br>
+造成你失職的錯/造成你失業的錯<br>
+見也胰不到的角/見也聽不到的角<br>
+，我座在搖椅/，我坐在搖椅<br>
+獲得資逋費，而/獲得資遣費，而<br>
+道，晚起來就像/道，聽起來就像<br>
+警衛撞在他前/警衛擋在他前<br>
+已經園成一團，而/已經圍成一團，而<br>
+言；臀如他是/言；譬如他是<br>
+上下握動。人/上下搧動。人<br>
+了個寒顏。/了個寒顫。<br>
+可以高在沙發/可以窩在沙發<br>
+我會靛你散發/我會幫你散發<br>
+母親縷上去的/母親繡上去的<br>
+﹂我嘟噃著。/﹂我嘟囔著。<br>
+我的珍子。﹂/我的疹子。﹂<br>
+心的紅疼消失/心的紅疹消失<br>
+的，露西P﹂接/的，露西。﹂接<br>
+<br>
+*** 沒有根據來函勘誤表修改之處***<br>
+威利（慣用翻譯）/沃利（正確發音）（依原書的用字）<br>
+車庫/修車廠（garage: a shelter or repair shop for automotive vehicles對老爺車來說後者比較合理）（依原書的用字）<br>
+半瓶酒，/半瓶酒。（依原書的用字）<br>
+攤坐/癱坐（依原書的用字）<br>
+那種人生活/那種連生活（依原書的用字）<br>
+去停/去修（依原書的用字）<br>
+我的口中/我的口袋中（依原書的用字）<br>
+嫌疑慣犯/？（依原書的用字）<br>
+每下愈況/每況愈下（依原書的用字）<br>
+、能有/、不能有（依原書的用字）<br>
+將眨眨眼/眨眨眼（依原書的用字）<br>
+捶她的腳/捶她的腿（依原書的用字）<br>
+席拉/希拉（依原書的用字）<br>
+布蘭克/布萊克（依原書的用字）<br>
+當我說/聽我說（依原書的用字）<br>
 </font>
 </td></tr></table>
