Upload of revised book 15M9

--- a/book/15M9.html
+++ b/book/15M9.html
@@ -12,15 +12,15 @@ $title = '小說十八史略壹';
 $book = 'C15M9';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2015/7/3 (242K) 2015/9/4');
+ShowUpdbDownload('2023/2/21 (242K) 2015/9/4 2015/7/3');
 ShowPrcDownload('2015/7/3 (242K) 2015/9/4');
 ShowMobiDownload('2015/7/3 (710K) 2015/9/4');
-ShowEpubDownload('2015/7/3 (179K) 2015/9/4');
-ShowVEpubDownload('2015/7/3 (179K) 2015/9/4');
+ShowEpubDownload('2023/2/21 (179K) 2015/9/4 2015/7/3');
+ShowVEpubDownload('2023/2/21 (179K) 2015/9/4 2015/7/3');
 BookSectionEnd();
 ?>
 <img src="covers/15M9.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝guinness參照原書整理校正過。譯者廖為智。感謝sue1289勘誤。感謝chin223提供掃描檔。<br>
+好讀書櫃《典藏版》，感謝guinness參照原書整理校正過。譯者廖為智。感謝chin223提供掃描檔。感謝sue1289勘誤。感謝Gilbert勘誤。<br>
 <br>
 <b>作者簡介</b><br>
 <br>
@@ -35,7 +35,13 @@ BookSectionEnd();
 人性面的探討，是〈小說十八史略〉的中心思想。全書二百七十七則故事，可說是含括了中國傳說時代至宋朝末年的歷史菁華。陳舜臣更以人性的角度切入各個歷史層面，透過歷史上關鍵人物的性格與定位來鋪陳歷史場景，使讀者在享受閱讀小說的樂趣之餘，也能賦予原本已熟悉的歷史事件及人物新的觀點，領略不同於以往的讀史趣味。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/02/21)<br>
+臥薪膽/臥薪嚐膽<br>
+夏王於是寫下勅　書向龍提示/夏王於是寫下勅書向龍提示<br>
+西施氣息不均地說了這些話/西施邊喘氣邊說了這些話。<br>
+明擺是準備無後顧之憂地/擺明是準備無後顧之憂地<br>
+<br>
 (sue1289 2015/9/4)<br>
 觀欣/歡欣<br>
 盜跖蹠/盜跖 (後面是用盜蹠) <font color=#0066CC>(盜蹠也改成盜跖)</font><br>
