Upload of revised book 1010490075

--- a/Share/1010490075.html
+++ b/Share/1010490075.html
@@ -12,13 +12,13 @@ $title = '兩宋風雲';
 $book = 'P1010490075';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/1/18');
-ShowEpubDownload('2023/1/18');
-ShowVEpubDownload('2023/1/18');
+ShowUpdbDownload('2023/2/23 2023/1/18');
+ShowEpubDownload('2023/2/23 2023/1/18');
+ShowVEpubDownload('2023/2/23 2023/1/18');
 BookSectionEnd();
 ?>
 <img src="covers/1010490075.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Sherlock整理製作及提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Sherlock整理製作及提供掃瞄檔。感謝Gilbert勘誤<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -44,6 +44,55 @@ BookSectionEnd();
 另在媒體與圖書出版的共伴效應下，短短幾個月間已有兩千五百萬人重燃起對歷史的熱愛，他們人手一部袁老師的著作，準備跟著他再上一堂史上最火辣幽默的歷史課。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(Gilbert 2023/02/23)<br>
+它與唐詩並稱為中國古典文學藝術的瑰寶在繪畫、書法藝術上/它與唐詩並稱為中國古典文學藝術的瑰寶。在繪畫、書法藝術上<br>
+氏處機/丘處機<br>
+俊悄/俊俏<br>
+宋黴宗/宋徽宗<br>
+卻被推上了皇帝的寶座那麽/卻被推上了皇帝的寶座。那麽<br>
+联則有賞/朕則有賞<br>
+眹不加罪/朕不加罪<br>
+寶際上/實際上（共兩處）<br>
+隨末叛軍/隋末叛軍<br>
+一刀一搶/一刀一槍<br>
+東京汗梁/東京汴梁<br>
+給老百姓帶來了巨大的災難那些想升官發財的官員/給老百姓帶來了巨大的災難。那些想升官發財的官員<br>
+並已生出了滅宋之心而宋徽宗的行事不憤/並已生出了滅宋之心。而宋徽宗的行事不慎<br>
+這就是歷史上著名的﹁靖康之變﹂宋徽宗即位時/這就是歷史上著名的﹁靖康之變﹂。宋徽宗即位時<br>
+怎樣對待待/怎樣對待<br>
+圍著把心/圍著靶心<br>
+早巳開始/早已開始<br>
+趙搆/趙構<br>
+戰刀也繡了/戰刀也鏽了<br>
+而且很點潑皮無賴/而且很有點潑皮無賴<br>
+結織韓世忠/結識韓世忠<br>
+彆杻/彆扭<br>
+禮制宫/禮制官<br>
+金國人這次立傀儸皇帝非常謹慎因為金國人希望這個傀儡皇帝能夠承擔起替他們統治占領區的責任/金國人這次立傀儸皇帝非常謹慎。因為金國人希望這個傀儡皇帝能夠承擔起替他們統治占領區的責任<br>
+處心積處/處心積慮<br>
+中與四將/中興四將<br>
+忠肝義瞻/忠肝義膽<br>
+並為此向高宗皇帝獻計獻策君臣交談正融洽之時/並為此向高宗皇帝獻計獻策。君臣交談正融洽之時<br>
+吃馬餵得要多少錢啊/人吃馬餵得要多少錢啊<br>
+金軍隨時有南下的可能而宋朝的大將裡面/金軍隨時有南下的可能，而宋朝的大將裡面<br>
+勢必來鼓/勢必來襲<br>
+糟蹋得夠遭/糟蹋得夠糟<br>
+但使龍城飛將住/但使龍城飛將在<br>
+王昌齡[/王昌齡<br>
+發兵道取中原/發兵進取中原<br>
+讓金國人向我們磕頭稱臣﹁稽顙﹂就是磕頭的意思/讓金國人向我們磕頭稱臣。﹁稽顙﹂就是磕頭的意思<br>
+瞻大心細/膽大心細<br>
+揚再興/楊再興（共兩處）<br>
+當時一本叫做︽建炎以來繫年要錄︾①，的書有記錄/當時一本叫做︽建炎以來繫年要錄︾①的書有記錄<br>
+眹要害你/朕要害你<br>
+揚沂中/楊沂中（共兩處）<br>
+上倫的先祖/王倫的先祖<br>
+督車破敵/督軍破敵<br>
+︵前6︱五十七︶/︵前六︱五十七︶<br>
+履經流離/屢經流離<br>
+必竟只有/畢竟只有<br>
+拍板訂案/拍板定案<br>
+一世英明毀於一旦/一世英名毀於一旦<br>
 </font>
 </td></tr></table>
