Upload of revised book 17Y4

--- a/book/17Y4.html
+++ b/book/17Y4.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("索妮雅．納薩瑞歐《被天堂遺忘的孩子》");
+SetTitle("索妮雅．納薩瑞歐【被天堂遺忘的孩子】");
 SetLink('<a href="?M=hd&P=fiction-4">小說園地 書目</a>');
 </script>
 
@@ -12,19 +12,36 @@ $title = '被天堂遺忘的孩子';
 $book = 'H17Y4';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/12/1 (368K)');
+ShowUpdbDownload('2023/2/23 (368K) 2017/12/1');
 ShowPrcDownload('2017/12/1 (398K)');
 ShowMobiDownload('2017/12/1 (1082K)');
-ShowEpubDownload('2017/12/1 (250K)');
-ShowVEpubDownload('2017/12/1 (250K)');
+ShowEpubDownload('2023/2/23 (250K) 2017/12/1');
+ShowVEpubDownload('2023/2/23 (250K) 2017/12/1');
 BookSectionEnd();
 ?>
 <img src="covers/17Y4a.jpg" HSPACE=2 align=center><br>
 <br>
 <img src="covers/17Y4.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝sue1289按掃描檔整理製作。譯者許晉福。<br>
+好讀書櫃【典藏版】，感謝sue1289按掃描檔整理製作。感謝邱五提供掃描檔。感謝Mindy/IT勘誤。<br>
 <br>
 被天堂遺忘的孩子(Enrique’s Journey)：因為窮到養不起孩子，安立奎的母親在他五歲時，忍痛拋下子女，遠赴美國工作。漫長的十一個年頭過去，極度思念母親的安立奎決定動身去尋找母親。帶著母親的電話號碼，他獨自一人從宏都拉斯出發。身上僅有57塊美金的他，只有一種方法能夠進入美國──那就是偷搭人稱「死亡列車」的載貨列車，沿著墨西哥鐵路非法潛入美國……<br>
 <br>
-作者索妮雅．納薩瑞歐(Sonia Nazario，1960──)，出生於美國威斯康辛州麥迪遜，在美國坎薩斯州和阿根廷長大，。《洛杉磯時報》的專案記者，專門採訪撰寫社會議題，得過十幾座國家級新聞獎項。現與丈夫定居在洛杉磯。 <br>
+作者簡介：<br>
+<br>
+索妮雅．納薩瑞歐(Sonia Nazario，1960──)，出生於美國威斯康辛州麥迪遜，在美國坎薩斯州和阿根廷長大，。《洛杉磯時報》的專案記者，專門採訪撰寫社會議題，得過十幾座國家級新聞獎項。現與丈夫定居在洛杉磯。<br>
+<br>
+譯者簡介：<br>
+<br>
+許晉福。<br>
+<br>
+<font size=2>
+<strong>勘誤表</strong>：<br>
+(Mindy/IT 2023/02/23)<br>
+位於墨西聲南部阿里/位於墨西哥南部阿里<br>
+爬上悌子，來/爬上梯子紆，來<br>
+時的紆困之道/時的紓困之道<br>
+　但歐爾洼也坦/　但歐爾佳也坦<br>
+來幫偷醬客醫腳/來幫偷渡客醫腳<br>
+表達坑議，抗/表達抗議，抗<br>
+</font>
 </td></tr></table>
